--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">NMedia</string>
+    <string name="app_name" translatable="false">NMedia</string>
+    <string name="hello">NMedia!</string>
 </resources>
